--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       <p>Le projet <strong>ROX ÉNERGIE INVEST</strong> a été lancé officiellement le <strong>20 juillet 2025 à 22h00</strong>.</p>
     </div>
 
+    
     <div class="section">
       <h2>🌍 Pays autorisés</h2>
       <p>Les utilisateurs suivants peuvent s’inscrire :</p>
@@ -90,9 +91,10 @@
         <li>🇲🇱 Mali</li>
         <li>🇳🇪 Niger</li>
         <li>🇧🇫 Burkina Faso</li>
+        <li>🇹🇬 Togo</li>
+        <li>🇧🇯 Bénin</li>
       </ul>
     </div>
-
     <div class="section">
       <h2>💰 Méthodes de transaction</h2>
       <ul>
